rename main html file index.html and created an image folder to put all the pictures in.

--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
         <li>They get free food everyday</li>
         <li>They live outside</li>
     <h4>Here are just a couple of pictures of Pawline in different places</h4>
-      <img src="1PawlineElegant.jpg" alt="a very nice close up picture of a lovely long haired brown and black cat looking back over their right shoulder with an elegant smile">
-      <img src="1Pawlineinhaze.jpg" alt="Pawline the cat standing in a doorway next to a door mat in a hazy lighting looking directly toward the camera with their cute light green eyes">
-      <img src="1Pawlineneartruck.jpg" alt="Pawline is taking a strole on a sunny day, we find her here squinting next to the rear tire of a tan Volvo truck bed where dandilions grow up from the cracks in the driveway">
+      <img src="img/1PawlineElegant.jpg" alt="a very nice close up picture of a lovely long haired brown and black cat looking back over their right shoulder with an elegant smile">
+      <img src="img/1Pawlineinhaze.jpg" alt="Pawline the cat standing in a doorway next to a door mat in a hazy lighting looking directly toward the camera with their cute light green eyes">
+      <img src="img/1Pawlineneartruck.jpg" alt="Pawline is taking a strole on a sunny day, we find her here squinting next to the rear tire of a tan Volvo truck bed where dandilions grow up from the cracks in the driveway">
     <h4 class="garbage"><strong>Pawline has a friend in the neighborhood named Timmy, who is also feline!</strong></h4>
     <h4>Unlike Pawline, Timmy lives inside and loves to cuddle with human people... Check him out!</h4>
-      <img src="1Timmyoncarpet.jpg" alt="a fluffy orange haired green eyed tabby is lying in the sun and stretching out while pawing at the carpet in an adorable way">
-      <img src="1Timmyonstool.jpg" alt="yet another photo of Timmy who is now sitting perched low on top of a wooden stool in a kitchen, he looks intently at the towards the viewer as if to say, 'please pick me up and hug me'">
+      <img src="img/1Timmyoncarpet.jpg" alt="a fluffy orange haired green eyed tabby is lying in the sun and stretching out while pawing at the carpet in an adorable way">
+      <img src="img/1Timmyonstool.jpg" alt="yet another photo of Timmy who is now sitting perched low on top of a wooden stool in a kitchen, he looks intently at the towards the viewer as if to say, 'please pick me up and hug me'">
     <h3 class="grace">"The life of a cat isn't all cuddles and saucers of milk", says Pawline's arch enemy Friskers with an evil hiss!</h3>
-      <img src="1Friskers.jpg" alt="Friskers a grey and brown striped short hair cat stands perched atop a fence with a malicious stare in their eye">
+      <img src="img/1Friskers.jpg" alt="Friskers a grey and brown striped short hair cat stands perched atop a fence with a malicious stare in their eye">
     <h2 class="style">But Pawline never let's Friskers get her down and always tries to help them whenever possible.  Pawline knows that Friskers has some cuddles in their heart somewhere ;)</h2>
-      <img src="1backporch.jpg" alt="Pawline standing on a step of the back porch of my house looking up a you like an angel kitty">
+      <img src="img/1backporch.jpg" alt="Pawline standing on a step of the back porch of my house looking up a you like an angel kitty">
     <h1>Thanks For Being a Great Friend Pawline!</h1>
   </body>
 </html>
